[package]
name = "rust_voxels_game"
version = "0.0.0"
edition = "2021"
publish = false
license = "LGPL-3.0+"

[profile.dev]
panic = "abort"

[dependencies]
termios = { version = "0.3.3", optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
minetest-schematic = { path = "minetest-schematic" }

[features]
embedded = []
hosted = ["dep:termios", "dep:libc"]
default = ["hosted"]
hosted_full_speed = ["hosted"]

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
opt-level = 'z'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[workspace]
members = [
    ".",
    "minetest-schematic",
]